# cpplox

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build_msan_libcxx.sh  run.fish  run.sh  test.txt
.github/workflows/: unit_test.yml  unit_tests.yml
src/: CMakeLists.txt  error_message.cpp  error_message.hpp  expr.hpp  lox.cpp  lox.hpp  main.cpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  token.hpp  token_type.cpp  token_type.hpp
tests/: CMakeLists.txt  test.cpp
